# delivery-bot-ros2

./: .gitignore  README.md
delivery_bot_ws/src/delivery_bot_ai/: package.xml  setup.cfg  setup.py
delivery_bot_ws/src/delivery_bot_ai/config/: training_config.yaml
delivery_bot_ws/src/delivery_bot_ai/delivery_bot_ai/: __init__.py  obstacle_avoidance_agent.py  reset_service.py  training_manager.py
delivery_bot_ws/src/delivery_bot_ai/launch/: ai_nav.launch.py  training.launch.py
delivery_bot_ws/src/delivery_bot_ai/resource/: delivery_bot_ai
delivery_bot_ws/src/delivery_bot_description/: CMakeLists.txt  package.xml
delivery_bot_ws/src/delivery_bot_description/config/: display.rviz
delivery_bot_ws/src/delivery_bot_description/launch/: display.launch.py
delivery_bot_ws/src/delivery_bot_description/meshes/: README.md
delivery_bot_ws/src/delivery_bot_description/urdf/: robot.urdf.xacro
delivery_bot_ws/src/delivery_bot_gazebo/: CMakeLists.txt  package.xml
delivery_bot_ws/src/delivery_bot_gazebo/launch/: sim.launch.py
delivery_bot_ws/src/delivery_bot_gazebo/worlds/: delivery_zone.sdf
