<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_bot_description</name>
  <version>1.0.0</version>
  <description>URDF/Xacro description package for DeliveryBot autonomous robot</description>
  <maintainer email="engineer@deliverybot.dev">Isaiah</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core URDF/Xacro dependencies -->
  <depend>urdf</depend>
  <depend>xacro</depend>
  
  <!-- Robot state publishing -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  
  <!-- Visualization -->
  <depend>rviz2</depend>
  
  <!-- Gazebo integration (Harmonic) -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
